ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
/* ... */
.nav-item {
    cursor: pointer;
    margin: 0 15px 0 0 !important;
}

.user-settings {
    @include container(10px);
    margin-top: 10px;
    width:50%;
    min-width: 400px;
    .ip-view-type {
        margin-bottom: 10px;
    }
    .column-picker {
        width: 100%;
        display: flex;
        flex-direction: row;
        .buttons {
            display: flex;
            flex-direction: column;
        }
        select {
            width: 150px;
        }
    }
}
.table-container {
    position: relative;
    overflow-x: auto;
    thead, tbody {
        border: 1px solid $border-color;
    }
}
.appraisal-page {
    margin-top: 10px;
    @include container(10px);
}

.flex-row {
    display: flex;
    flex-direction: row;
    * {
        margin-right: 3px;
    }
}
.list-view {
    @include container(10px);
    display: flex;
    flex-direction: column;
    margin-top: 10px;
    .list-view-table {
        position: relative;
        overflow-x: auto;
        thead, tbody {
            border: 1px solid $border-color;
        }
    }
}
.list-view-buttons {
    display: flex;
    flex-direction: row;
    justify-content: left;
    margin-bottom: 5px;
}
.list-view-buttons .btn {
    margin-left: 10px;
}

.enter-profile-name {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: stretch;
    position: relative;
    width: 100%;
    .fa-refresh {
        position: absolute;
        top: 10px;
        right: 5px;
    }
}

.object-identifier-value {
    display: inline-block;
}

.generation-indicator {
    margin-left: 5px;
    display: inline-block;
    padding: 3px 5px;
    font-size: 12px;
    color: white;
    background-color: $gold-leaf;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}

